--- a/css/header-style.css
+++ b/css/header-style.css
@@ -1,85 +1,20 @@
-.button {
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-    color: #fff;
-    background-color: #2fa0f6;
-    min-width: 120px;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    text-align: center;
-  }
-  @media (max-width: 629px) {
-    .button {
-    margin-right: 2.5rem;     
-      }
-  }
-  
-  .brand {
-    font-weight: bold;
-    font-size: 20px; }
-  
-  .site-header {
-    position: relative;
-    background-color: #def7ff; }
-  
-  .site-header__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem; }
-    @media (min-width: 630px) {
-      .site-header__wrapper {
-        justify-content: initial; }
-    }
-  @media (min-width: 630px) {
-    .site-header__middle {
-      margin-left: auto; }
-  }
-  
-  @media (max-width: 629px) {
-    .site-header__end {
-      padding-right: 4rem; }
-  }
-  
-  @media (min-width: 630px) {
-    .nav__wrapper {
-      display: flex; }
-  }
-  
-  @media (max-width: 629px) {
-    .nav__wrapper {
-      position: absolute;
-      top: 100%;
-      right: 0;
-      left: 0;
-      z-index: -1;
-      background-color: #d9f0f7;
-      visibility: hidden;
-      opacity: 0;
-      transform: translateY(-100%);
-      transition: transform 0.3s ease-out, opacity 0.3s ease-out; }
-  
-      .nav__wrapper.active {
-        visibility: visible;
-        opacity: 1;
-        transform: translateY(0); }
-  }
-  
-  li.nav__item {
-      list-style-type: none;
-  }
-  .nav__item a {
-    display: block;
-    padding: 1rem;
-  }
-  
-  .nav__toggle {
-    display: none; }
-    @media (max-width: 629px) {
-      .nav__toggle {
-        display: block;
-        position: absolute;
-        right: 1rem;
-        top: 1rem; }
-    }
+header {
+    width: 100%;
+    height: 70px;
+    color: #1d1d1d;
+    background-color: #e6e6fa;
+    opacity: 0.6;
+    position: fixed;
+    top: 0;
+    transition: 0.5s;
+}
+
+footer {
+    width: 100%;
+    height: 70px;
+    color: #ffffff;
+    background-color: #383838;
+    position: fixed;
+    bottom: 0;
+    transition: 0.5s;
+}
