--- a/css/administrator-Delete-user.css
+++ b/css/administrator-Delete-user.css
@@ -1,6 +1,11 @@
-.user_search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.searchbutton {
+    display: inline-block;
+    /* width:20px;
+    height:20px; */
+    line-height: 20px;
+    border: 1px solid #333;
+    background-color: #ffffff;
+    border-radius:3px;
     text-align: center;
+    text-decoration: none;
 }
