--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@ header{
     position: sticky;
     top:0;
     transition: 0.5s;/* アニメーション表示時間 */
-    background-color:rgb(255, 50, 200);
+    background-color:rgb(208, 250, 0);
 }
 
 footer{
@@ -12,24 +12,214 @@ footer{
     position: sticky;
     bottom: 0;
     transition: 0.5s;
-    background-color:rgb(255, 50, 200);
+    background-color:rgb(208, 250, 0);
 }
 
 #nav {
     list-style: none;/*リストの・を消す*/
     font-size: 0;
+    padding: 0;
 }
    
 #nav li {
-    width: 140px;
+    width: 25%;
     text-align: center;
-    background-color: #333;
+    background-color: rgb(208, 250, 0);
     display: inline-block;
     font-size: 16px;
 }
    
 #nav li a {
     text-decoration: none;/*文字の下線を消す*/
-    color: #fff;
+    color: #000000;
     font-weight: bold;
 }
+
+/* バーガーメニュー */
+html{
+    box-sizing: border-box;
+  }
+  *, *:after,*:before{
+    box-sizing: inherit;
+  }
+  a{
+    color: #000000;
+    text-decoration: none;
+  }
+  html{
+    width: 100%;
+     height: 100%;
+  }
+  body{
+    background: #ffffff;
+    width: 100%;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #000000;
+    padding: 60px;
+  }
+  h1{
+    width: 100%;
+    text-align: center;
+    padding: 40px 0;
+  }
+  .open{
+    position: fixed;
+    top: 40px;
+    right: 40px;
+    width: 50px;
+    height: 50px;
+    display: block;
+    cursor: pointer;
+    transition: opacity 0.2s linear;
+    &:hover{
+      opacity: 0.8;
+    }
+    span{
+      display: block;
+      float: left;
+      clear: both;
+      height: 4px;
+      width: 40px;
+      border-radius: 40px;
+      background-color: #000000;
+      position: absolute;
+      right: 3px;
+      top: 3px;
+      overflow: hidden;
+      transition: all 0.4s ease;
+      &:nth-child(1){
+        margin-top: 10px;
+        z-index: 9;
+      }
+      &:nth-child(2){
+        margin-top: 25px;
+      }
+      &:nth-child(3){
+        margin-top: 40px;
+      }
+    }
+  }
+  .sub-menu{
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      height: 0;
+      width: 0;
+      right: 0;
+      top: 0;
+      position: absolute;
+      background-color: rgba(38, 84, 133, 0.54);
+      border-radius: 50%;
+      z-index: 18;
+      overflow: hidden;
+      li{
+        display: block;
+        float: right;
+        clear: both;
+        height: auto;
+        margin-right: -160px;
+        transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        &:first-child{
+          margin-top: 180px;
+        }
+        &:nth-child(1){
+          -webkit-transition-delay: 0.05s;
+        }
+        &:nth-child(2){
+          -webkit-transition-delay: 0.10s;
+        }
+        &:nth-child(3){
+          -webkit-transition-delay: 0.15s;
+        }
+        &:nth-child(4){
+          -webkit-transition-delay: 0.20s;
+        }
+        &:nth-child(5){
+          -webkit-transition-delay: 0.25s;
+        }
+        a{
+          color: #000000;
+          font-family: 'Lato', Arial, Helvetica, sans-serif;
+          font-size: 16px;
+          width: 100%;
+          display: block;
+          float: left;
+          line-height: 40px;
+        }
+      }
+    }
+  
+    .oppenned{
+      .sub-menu{
+        opacity: 1;
+        height: 400px;
+        width: 400px;
+      }
+      span:nth-child(2){
+        overflow: visible;
+      }
+      span:nth-child(1), span:nth-child(3){
+        z-index: 100;
+        transform: rotate(45deg);
+      }
+      span:nth-child(1){
+        transform: rotate(45deg) translateY(12px) translateX(12px);
+      }
+      span:nth-child(2){
+        height: 400px;
+        width: 400px;
+        right: -160px;
+        top: -160px;
+        border-radius: 50%;
+        background-color: rgba(38, 84, 133, 0.54);
+      }
+      span:nth-child(3){      
+        transform: rotate(-45deg) translateY(-10px) translateX(10px);
+      }
+      li{
+        margin-right: 168px;
+      }
+    }
+  .button{
+    display: block;
+    float: left;
+    clear: both;
+    padding: 20px 40px;
+    background: #000000;
+    border-radius: 3px;
+    border: 2px solid #10a1ea;
+    overflow: hidden;
+    position: relative;
+    &:after{
+      transition: transform 0.3s ease;
+      content: "";
+      position: absolute;
+      height: 200px;
+      width: 400px;
+      transform: rotate(45deg) translateX(-540px) translateY(-100px);
+      background: #10a1ea;
+      z-index: 1;
+    }
+    &:before{
+      transition: transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      content: attr(title);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      color: #000000;
+      z-index: 2;
+      text-align: center;
+      padding: 20px 40px;
+      transform: translateY(200px);
+    }
+    &:hover{
+      text-decoration: none;
+      &:after{
+        transform: translateX(-300px) translateY(-100px);
+      }
+      &:before{
+        transform: translateY(0);
+      }
+    }
+  }
