--- a/css/header.css
+++ b/css/header.css
@@ -64,7 +64,8 @@ html{
     padding: 40px 0;
   }
   .open{
-    position: fixed;
+    position: sticky;
+    /* position: fixed; */
     top: 40px;
     right: 40px;
     width: 50px;
