ユーザー削除画面作成中

--- a/css/administrator-Delete-user.css
+++ b/css/administrator-Delete-user.css
@@ -8,4 +8,13 @@
     border-radius:3px;
     text-align: center;
     text-decoration: none;
+    padding: 2%;
+}
+
+.userDelete_button {
+    margin-left: 10%;
+}
+
+.keyword {
+    padding: 2%;
 }
