--- a/css/login.css
+++ b/css/login.css
@@ -1,34 +1,44 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f9f9f9;
+    margin: 0;
+    overflow: hidden;
+}
+
+.container {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
 }
 
-.container {
-    display: flex;
-    background: #fff;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+.video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
     overflow: hidden;
-    max-width: 800px;
-    width: 90%;
+}
+
+#background-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .login-form {
-    padding: 40px;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* background: linear-gradient(to bottom, #ff5252, #b81c1c); */
-    /* background: linear-gradient(to bottom, #52d7ff, #1c62b8); */
-    background: linear-gradient(to bottom, #ffcccc, #ff86b2);
-    /* background: linear-gradient(to bottom, #ffc489, #ff9742); */
-    color: #fff;
+    position: absolute;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    max-width: 400px;
+    left: 20px; /* 左から20pxの位置に配置 */
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .login-form h1 {
@@ -74,7 +84,6 @@ body {
 }
 
 .btn {
-    /* background-color: #4CAF50; */
     background-color: #6adf6e;
     color: white;
 }
