--- a/css/login.css
+++ b/css/login.css
@@ -45,13 +45,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 50px; /* フォームを下に下げるためのマージンを追加 */
+    margin-top: 200px; /* フォームをさらに下に下げるためのマージンを追加 */
 }
 
 .login-form h1 {
     font-size: 2rem;
     margin-bottom: 20px;
-    text-align: center;
+    width: 100%;
+    height: 80%;
 }
 
 .form-group {
