--- a/css/signup.css
+++ b/css/signup.css
@@ -67,6 +67,7 @@ body {
     background-color: rgba(255, 255, 255, 0.1);
     color: #000; /* Changed text color to black for better visibility */
     transition: 0.3s;
+    box-shadow: 0 0 6px 1px #fca7d2, 0 0 6px 1px #fca7d2 inset;
 }
 
 .form-group input:focus {
