--- a/css/login.css
+++ b/css/login.css
@@ -67,7 +67,6 @@ body {
 }
 
 .form-group input {
-    width: 100%;
     padding: 12px;
     border: 1px solid #000;  /* 常に黒い枠を表示 */
     border-color: #fca7d2;
@@ -97,14 +96,13 @@ body {
 
 .btn-secondary{
     display: block;
-    width: 200%; /* 両方のボタンがコンテナの幅いっぱいになるように設定 */
+    width: 215px;
     padding: 12px;
     border: none;
     border-radius: 20px;
     font-size: 1.2rem;
     cursor: pointer;
     margin-top: 10px;
-    align: center;
 }
 
 .btn {
