--- a/css/administrator-userList.css
+++ b/css/administrator-userList.css
@@ -49,3 +49,8 @@ button[type="button"] {
     padding: 10px 20px;
     font-size: 1.2em;
 }
+.top-right-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
