--- a/css/post.css
+++ b/css/post.css
@@ -2,6 +2,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: url('../images/sky3.png'); 
+    background-size: cover; 
+    background-attachment: fixed;
+    background-position: center;
    
 }
 
