--- a/css/profile_edit.css
+++ b/css/profile_edit.css
@@ -3,6 +3,10 @@ body {
     font-weight: bold;
     text-align: center;
     padding: 20px;
+    background-image: url('../images/sky3.png'); 
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
 }
 .profile-picture {
     width: 100px;
