--- a/css/profile_edit.css
+++ b/css/profile_edit.css
@@ -14,7 +14,7 @@ body {
     background-color: #ccc;
     border-radius: 50%;
     margin: 0 auto;
-    background-image: url('images/<?php echo $photographPath; ?>');  /* ここに写真のパスを入れる */
+   /* background-image: url('images/<?php echo $photographPath; ?>');  /* ここに写真のパスを入れる */
     background-size: cover;
     position: relative;
 }
