--- a/css/header.css
+++ b/css/header.css
@@ -13,7 +13,7 @@ header{
     /* position: sticky; */
     top:0;
     transition: 0.5s;/* アニメーション表示時間 */
-    background-color:rgb(208, 250, 0);
+    background-color:rgb(206, 158, 246);
     /* 画面の最前列にする */
     z-index: 1000;
 }
@@ -37,7 +37,7 @@ footer{
 #nav li {
     width: 25%;
     text-align: center;
-    background-color: rgb(208, 250, 0);
+    background-color: rgb(206, 158, 246);;
     display: inline-block;
     font-size: 16px;
 }
@@ -58,13 +58,13 @@ footer{
 .fix-btn{
   position:fixed;
   z-index:1;
-  background:#2dd8c8;
+  background:rgb(206, 158, 246);;
   width:150px;
   border-radius:15px;
   text-decoration:none;
   font-size:14px;
   text-align:center;
-  color:#333;
+  color:#000000;
   padding:20px 0;
   right:20px;
   bottom:40px;
