--- a/css/header.css
+++ b/css/header.css
@@ -63,9 +63,10 @@ footer{
   z-index:1;
   /* background: rgb(156, 155, 255); */
   background:#d6adff;
-  width:150px;
+  width:100px;
+  height: 100;
   border: 2px solid #000;
-  border-radius:15px;
+  border-radius:50px;
   border-color: rgb(137,26,226);
   text-decoration:none;
   font-size:14px;
@@ -76,6 +77,11 @@ footer{
   bottom:40px;
   box-shadow:1px 1px 5px #aaa;
 }
+
+
+
+
+
 
 /* バーガーメニュー */
 /* html{
