--- a/css/header.css
+++ b/css/header.css
@@ -17,6 +17,8 @@ header{
     background-color: #d6adff;
     /* 画面の最前列にする */
     z-index: 1000;
+    font-size: 150%;
+    text-align: center;
 }
 
 footer{
@@ -38,11 +40,12 @@ footer{
    
 #nav li {
     width: 25%;
+    height: 33px;
     text-align: center;
     /* background-color: rgb(208, 250, 0); */
     background-color: #d6adff;
     display: inline-block;
-    font-size: 16px;
+    font-size: 17.5px;
 }
    
 #nav li a {
