--- a/css/header.css
+++ b/css/header.css
@@ -81,7 +81,36 @@ footer{
   box-shadow:1px 1px 5px #aaa;
 }
 
+/* #over{
+  position:fixed;
+  top: -100px;
+} */
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  display: none; /* 最初は非表示 */
+}
 
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #7983ff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
 /* バーガーメニュー */
 /* html{
     box-sizing: border-box;
