--- a/css/header.css
+++ b/css/header.css
@@ -65,20 +65,20 @@ footer{
   position:fixed;
   z-index:1;
   /* background: rgb(156, 155, 255); */
-  background:#d6adff;
+  /* background:#d6adff; */
   width:100px;
-  height: 100px;
-  border: 2px solid #000;
+  /* height: 100px; */
+  /* border: 2px solid #000; */
   border-radius:50px;
-  border-color: rgb(137,26,226);
+  /* border-color: rgb(137,26,226); */
   text-decoration:none;
   font-size:30px;
   text-align:center;
   color:#000000;
   padding:20px 0;
   right:20px;
-  bottom:40px;
-  box-shadow:1px 1px 5px #aaa;
+  /* bottom:40px; */
+  /* box-shadow:1px 1px 5px #aaa; */
 }
 
 /* #over{
