--- a/css/chat-input.css
+++ b/css/chat-input.css
@@ -1,10 +1,17 @@
-.input-button{
-    display: inline-block;
-    margin-top: 10px;
-    padding: 5px 10px;
-    border: 2px solid rgb(137,26,226);
-    border-radius: 20px;
-    color: rgb(137,26,226);
-    text-decoration: none;
-    font-size: 14px;
+.input-button {
+    white-space: nowrap;
+    justify-content: center;
+    margin: 1px auto;
+    padding: 8px;
+    background-color: #ffffff;
+    box-shadow: 0 0 6px 1px #d6adff, 0 0 6px 1px #d6adff inset;
+    border-radius: 30px;
+    border-color: #d6adff;
+    box-sizing: border-box;
+    border: 1px solid #d6adff;
+}
+
+.input-button:hover{
+    background-color: #d6adff;
+    color: #ffffff;
 }
