--- a/css/chat.css
+++ b/css/chat.css
@@ -5,6 +5,20 @@ div.you{
     text-align: left;
 }
 
+.addition {
+    white-space: nowrap;
+    width: 58%;
+    margin: 1px auto;
+    padding: 8px;
+    background-color:#ffffff;
+    box-shadow: 0 0 6px 1px #d6adff, 0 0 6px 1px #d6adff inset;
+    border-radius: 30px;
+    border-color: #d6adff;
+    box-sizing: border-box;
+    border: 1px solid #d6adff;
+}
+
+
 .addition:hover {
     background-color: #d6adff;
     color: #fff;
@@ -12,7 +26,7 @@ div.you{
 
 .invited {
     white-space: nowrap;
-    justify-content: center;
+    width: 58%;
     margin: 1px auto;
     padding: 8px;
     background-color:#ffffff;
