--- a/css/signup-ten.css
+++ b/css/signup-ten.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    padding: 20px;
-    background-image: url('./images/sky3.png'); 
+    /* padding: 20px; */
+    /* background-image: url('./images/sky3.png');  */
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
