--- a/css/header-chat.css
+++ b/css/header-chat.css
@@ -1,5 +1,5 @@
 #container{
-    margin: 0;
+    /* margin: 0; */
     /* padding: 12px;
     position: relative; */
     top: 50px;
@@ -29,88 +29,12 @@
       left: 0;
       bottom: 0;
       width: 100%;
+      height: 40px;
       transition: 0.5s;
       /* background-color: rgb(208, 250, 0); */
       background-color: #d6adff;
+      display: grid;
+      display: flex;
+      justify-content: center; /* 横方向の中央寄せ */
+      align-items: center; /* 縦方向の中央寄せ */
   }
-  
-  #nav {
-      list-style: none;/*リストの・を消す*/
-      /* font-size: 0; */
-      padding: 0;
-  }
-     
-  #nav li {
-      width: 25%;
-      height: 33px;
-      text-align: center;
-      /* background-color: rgb(208, 250, 0); */
-      background-color: #d6adff;
-      display: inline-block;
-      font-size: 17.5px;
-  }
-     
-  #nav li a {
-      text-decoration: none;/*文字の下線を消す*/
-      color: #000000;
-      font-weight: bold;
-  }
-  
-  /*コンテンツ部分*/
-  .box{
-    background:#ddd;
-    width:100%;
-    height:800px;
-  }
-  /*追従ボタン*/
-  .fix-btn{
-    position:fixed;
-    z-index:1;
-    /* background: rgb(156, 155, 255); */
-    /* background:#d6adff; */
-    width:100px;
-    /* height: 100px; */
-    /* border: 2px solid #000; */
-    border-radius:50px;
-    /* border-color: rgb(137,26,226); */
-    text-decoration:none;
-    font-size:30px;
-    text-align:center;
-    color:#000000;
-    padding:20px 0;
-    right:20px;
-    /* bottom:40px; */
-    /* box-shadow:1px 1px 5px #aaa; */
-  }
-  
-  /* #over{
-    position:fixed;
-    top: -100px;
-  } */
-  .spinner-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    display: none; /* 最初は非表示 */
-  }
-  
-  .spinner {
-    width: 40px;
-    height: 40px;
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #7983ff;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-    to { transform: rotate(360deg); }
-  }
-  
