--- a/css/header-chat.css
+++ b/css/header-chat.css
@@ -16,11 +16,14 @@
       top:0;
       transition: 0.5s;/* アニメーション表示時間 */
       /* background-color: rgb(208, 250, 0); */
-      background-color: #d6adff;
+      background-color: black;
       /* 画面の最前列にする */
       z-index: 1000;
       font-size: 150%;
       text-align: center;
+  }
+  #back{
+    text-align: left;
   }
   
   footer{
@@ -32,7 +35,7 @@
       height: 40px;
       transition: 0.5s;
       /* background-color: rgb(208, 250, 0); */
-      background-color: #d6adff;
+      background-color: black;
       display: grid;
       display: flex;
       justify-content: center; /* 横方向の中央寄せ */
