--- a/css/chat-top.css
+++ b/css/chat-top.css
@@ -1,7 +1,7 @@
 div.chatroom{
     /* box-sizing: border-box; */
     width: 100%;
-    height: 100%;
+    height: 50px;
     margin: 10px 0;
     overflow: hidden;
 }
