--- a/css/chat-room.css
+++ b/css/chat-room.css
@@ -1,3 +1,13 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url('../images/sky3.png'); 
+  background-size: cover; 
+  background-attachment: fixed;
+  background-position: center;
+}
+
 /* div.my{
     text-align: right;
     
