--- a/css/header-chat2.css
+++ b/css/header-chat2.css
@@ -1,3 +1,6 @@
+body{
+    background-color: rgba(0, 0, 0, 0.237);
+}
 #container{
     margin: 0;
     padding: 12px;
@@ -14,11 +17,18 @@
       top:0;
       transition: 0.5s;/* アニメーション表示時間 */
       /* background-color: rgb(208, 250, 0); */
-      background-color: #d6adff;
+      background-color: black;
       /* 画面の最前列にする */
       z-index: 1000;
       font-size: 150%;
       text-align: center;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+  }
+  #cs{
   }
   
   footer{
@@ -29,7 +39,8 @@
       width: 100%;
       transition: 0.5s;
       /* background-color: rgb(208, 250, 0); */
-      background-color: #d6adff;
+      background-color: black;
+      overflow: hidden;
   }
   
   #nav {
@@ -43,72 +54,15 @@
       height: 33px;
       text-align: center;
       /* background-color: rgb(208, 250, 0); */
-      background-color: #d6adff;
+      background-color: black;
       display: inline-block;
       font-size: 17.5px;
   }
      
   #nav li a {
       text-decoration: none;/*文字の下線を消す*/
-      color: #000000;
+      color: white;
       font-weight: bold;
   }
   
-  /*コンテンツ部分*/
-  .box{
-    background:#ddd;
-    width:100%;
-    height:800px;
-  }
-  /*追従ボタン*/
-  .fix-btn{
-    position:fixed;
-    z-index:1;
-    /* background: rgb(156, 155, 255); */
-    /* background:#d6adff; */
-    width:100px;
-    /* height: 100px; */
-    /* border: 2px solid #000; */
-    border-radius:50px;
-    /* border-color: rgb(137,26,226); */
-    text-decoration:none;
-    font-size:30px;
-    text-align:center;
-    color:#000000;
-    padding:20px 0;
-    right:20px;
-    /* bottom:40px; */
-    /* box-shadow:1px 1px 5px #aaa; */
-  }
-  
-  /* #over{
-    position:fixed;
-    top: -100px;
-  } */
-  .spinner-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    display: none; /* 最初は非表示 */
-  }
-  
-  .spinner {
-    width: 40px;
-    height: 40px;
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #7983ff;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-    to { transform: rotate(360deg); }
-  }
   
