--- a/css/chat-room.css
+++ b/css/chat-room.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('../images/sky3.png'); 
+  background: #7da4cd;
   background-size: cover; 
   background-attachment: fixed;
   background-position: center;
