--- a/css/header-chat2.css
+++ b/css/header-chat2.css
@@ -65,4 +65,20 @@ body{
       font-weight: bold;
   }
   
+  .consent {
+    white-space: nowrap;
+      justify-content: center;
+      margin: 1px auto;
+      padding: 8px;
+      background-color: #ffffff;
+      box-shadow: 0 0 6px 1px #d6adff, 0 0 6px 1px #d6adff inset;
+      border-radius: 30px;
+      border-color: #d6adff;
+      box-sizing: border-box;
+      border: 1px solid #d6adff;
+  }
   
+  .consent:hover {
+    background-color: #d6adff;
+    color: #ffffff;
+  }
