--- a/css/header-chat2.css
+++ b/css/header-chat2.css
@@ -1,6 +1,5 @@
 body{
     background-color: rgb(0 123 77 / 45%);
-    color: white;
 }
 #container{
     margin: 0;
@@ -64,4 +63,54 @@ body{
       font-weight: bold;
   }
   
+  /*追従ボタン*/
+.fix-btn{
+    position:fixed;
+    z-index:1;
+    /* background: rgb(156, 155, 255); */
+    /* background:#d6adff; */
+    width:100px;
+    /* height: 100px; */
+    /* border: 2px solid #000; */
+    border-radius:50px;
+    /* border-color: rgb(137,26,226); */
+    text-decoration:none;
+    font-size:30px;
+    text-align:center;
+    color:#000000;
+    padding:20px 0;
+    right:20px;
+    /* bottom:40px; */
+    /* box-shadow:1px 1px 5px #aaa; */
+  }
   
+  /* #over{
+    position:fixed;
+    top: -100px;
+  } */
+  .spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    display: none; /* 最初は非表示 */
+  }
+  
+  .spinner {
+    width: 40px;
+    height: 40px;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #7983ff;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    to { transform: rotate(360deg); }
+  }
