--- a/css/signup.css
+++ b/css/signup.css
@@ -15,7 +15,7 @@ body {
 }
 
 #background-video {
-   width: 100%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
@@ -25,7 +25,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100vh;
 }
 
 .signup-form {
@@ -34,15 +34,15 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    max-width: 250px;
+    max-width: 300px;
     width: 100%;
-    margin-top: 230px; 
 }
 
 .signup-form h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-bottom: 20px;
     text-align: center;
+    color: #fca7d2;
 }
 
 .form-group {
@@ -51,73 +51,55 @@ body {
 
 .form-group label {
     display: block;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
     font-size: 1rem;
+    color: #333;
 }
 
 .form-group input {
-    width: 90%;
-    padding: 12px;
-    border: 1px solid #000; /* Ensure the border is a solid color */
-    border-color: #fca7d2;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #fca7d2;
     border-radius: 20px;
     font-size: 1rem;
     background-color: rgba(255, 255, 255, 0.1);
-    color: #000; /* Changed text color to black for better visibility */
+    color: #333;
     transition: 0.3s;
-    box-shadow: 0 0 6px 1px #fca7d2, 0 0 6px 1px #fca7d2 inset;
+    box-shadow: 0 0 6px 1px #fca7d2 inset;
 }
 
 .form-group input:focus {
     border-color: #fca7d2;
+    box-shadow: 0 0 6px 1px #fca7d2;
 }
-
-.btn1 {
+.pass1, .pass2, .pass3, .pass4{
     background-color: white;
     color: #fca7d2;
     display: inline-block;
-    width: 100%;
-    padding: 9px;
-    border: 2px solid #fca7d2;
-    border-radius: 20px;
-    font-size: 1rem;
-    cursor: pointer;
-    margin-top: -40px;
-}
-.btn2 {
-    background-color: white;
-    color: #fca7d2;
-    display: inline-block;
-    width: 100%;
-    padding: 8px;
+    width: 10px;
+    padding: 28px;
     border: 2px solid #fca7d2;
     border-radius: 20px;
     font-size: 1rem;
     cursor: pointer;
     margin-top: 10px;
+    transition: background-color 0.3s, color 0.3s;
 }
-.btn3 {
+.btn1, .btn2, .btn3{
     background-color: white;
     color: #fca7d2;
     display: inline-block;
     width: 100%;
-    padding: 8px;
+    padding: 10px;
     border: 2px solid #fca7d2;
     border-radius: 20px;
     font-size: 1rem;
     cursor: pointer;
     margin-top: 10px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-.btn1:hover {
-    background-color: #fca7d2;
-    color: white;
-}
-.btn2:hover {
-    background-color: #fca7d2;
-    color: white;
-}
-.btn3:hover {
+.btn1:hover, .btn2:hover, .btn3:hover, .pass1:hover, .pass2:hover, .pass3:hover, .pass4:hover {
     background-color: #fca7d2;
     color: white;
 }
